Thu Jul  8 23:12:30 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/openssl/test_config.rb: test_s_parse_format added in the
	  prvious commit fails for all OpenSSL implementations.  fixed the
	  test. tested against OpenSSL 1.0.0a and OpenSSL 0.9.8o.

Thu Jul  8 21:10:36 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/openssl/test_config.rb: added tests for class methods, 
	  constants and parse format of OpenSSL itself.

Thu Jul  8 13:43:13 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/openssl/test_config.rb: added tests for all Config methods.

Wed Jul  7 13:24:24 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (ruby_find_basename): set correct baselen.

Fri Jul  2 23:34:45 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (ruby_find_basename, ruby_find_extname): split from
	  rb_file_s_basename() and rb_file_s_extname().

	* util.c (ruby_add_suffix): support arbitrary length of the suffix
	  to get rid of the potential buffer overflow.
	  reported by tarui.

Sat Jun 26 00:04:27 2010  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#rmdir): Backport -p (parents).  This
	  fixes "make clean".

Fri Jun 25 23:45:24 2010  Akinori MUSHA  <knu@iDaemons.org>

	* common.mk (version.$(OBJEXT)): Fix build. (GNU make seems to
	  have handled it)

Fri Jun 25 11:37:34 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/socket/raddrinfo.c (ruby_getaddrinfo__darwin): new workaround for
	  getaddrinfo problem on Mac OS X Snow Leopard.  [ruby-core:29427]
	  patch by Wataru Kimura.  [ruby-core:30842] [Backport #3474]

Wed Jun 23 21:36:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: avoid getcontext() overhead if possible.
	[ruby-core:27380][Bug #2553]
	Thanks, Joe Damato, Dan Peterson and Patrick Mohr.

Tue Jun 22 21:33:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/optparse/test_summary.rb: fixed superclass so that it run
	  solely.

Tue Jun 15 10:29:00 2010  Kenta Murata  <mrkn@mrkn.jp>
